# extractor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mono.cpp
src/langsplit/: header.h  langsplit.cpp  langsplit.h  langsplitfilter.cpp  langsplitfilter.h  string_util.h
src/mono/: buffered_map.cpp  buffered_map.h  langcollector.cpp  langcollector.h  language_sink.cpp  language_sink.h  mono.cpp  mono.h  pcqueue.h  producer.cpp  producer.h  readwarc.cpp  readwarc.h  warcfilter.cpp  warcfilter.h  worker.cpp  worker.h
src/mono/filters/: header.h  langcollectorfilter.cpp  langcollectorfilter.h  langsplitfilter.cpp  langsplitfilter.h  string_util.h  warcfilter.cpp  warcfilter.h
src/utils/: common.cpp  common.h  compression.cpp  compression.h  curldownloader.cpp  curldownloader.h  logging.cpp  logging.h
tests/: CMakeLists.txt  test_integration.cpp  test_langsplit.cpp  test_readerwarc.cpp  test_utils.cpp
tests/data_integration/: test1.out  test1_en.out  test1_ja.out  test2_de.out  test2_ru.out  test3.in  test3_en.out
tests/data_langsplit/: test1.in  test1.out  test1_langstats.out
tests/data_readerwarc/: test1.in  test1.out  test2.in  test2.out  test3.in  test4.in  test4.out  test5.in  test5.out
